# MandelbrotViewer

./: .gitignore  MandelbrotViewer.cabal  README.md
app/: .ghci  Main.hs
